// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForgotPasswordForm should match snapshot 1`] = `
<Form>
  <Component>
    Please enter your email address to reset your password
  </Component>
  <Component>
    <Component>
      <Component
        dataTest="email"
        id="email"
        labelText="Email"
        name="email"
        type="email"
      />
    </Component>
  </Component>
  <Component>
    <Component
      disabled={false}
      loading={true}
      type="submit"
      variant="primary"
    >
      Submit
    </Component>
  </Component>
</Form>
`;

exports[`ForgotPasswordForm should match snapshot 2`] = `
<Form>
  <Component>
    Please enter your email address to reset your password
  </Component>
  <Component>
    <Component>
      <Component
        dataTest="email"
        id="email"
        labelText="Email"
        name="email"
        type="email"
      />
    </Component>
  </Component>
  <Component
    message="Your forgotten password request has failed. Please try again or contact our support desk"
    type="danger"
  />
  <Component>
    <Component
      disabled={false}
      loading={true}
      type="submit"
      variant="primary"
    >
      Submit
    </Component>
  </Component>
</Form>
`;

exports[`ForgotPasswordForm should match snapshot 3`] = `<Component />`;

exports[`SuccessForgetPasswordContent should match snapshot 1`] = `
<Component
  centerContent={true}
  flexColumn={true}
  hasPadding={true}
>
  <Component
    isCentered={true}
  >
    Success
  </Component>
  <span>
    Please check your inbox for an email we have just sent you with instructions for how to reset your password.
  </span>
  <br />
  <Link
    to="/developer/login"
  >
    Click here to return to the login page
  </Link>
</Component>
`;
